# grpo_unsloth_docker

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  job_h100.slurm  job_v100.slurm  main.py  pyproject.toml
config/: config.yaml
