[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffusers>=0.32.2",
    "hydra-core>=1.3.2",
    "hydra-joblib-launcher>=1.2.0",
    "omegaconf>=2.3.0",
    "pre-commit>=4.1.0",
    "unsloth>=2025.2.4",
    "vllm==0.7.2",
]
